--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         </activity>
         <activity android:name=".TraineeActivity"/>
         <activity android:name=".MyActivity"/>
+        <activity android:name=".activity.DetailActivity"/>
     </application>
 
 </manifest>
